--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+  <title>PBD Mental Health Tracker</title>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,5 +11,4 @@
   <body>
     {% block content %} {% endblock content %}
   </body>
-</html> 
-
+</html>
