--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+
+{% block title%} PBD Mental Health Tracker {%endblock title%}
 <h1>Mental Health Tracker</h1>
 
 <h5>NPM: </h5>
